<resources>
    <string name="app_name">AsTime</string>
    <string name="action_settings">Settings</string>
    <string name="as_time_server">http://astimes.sinaapp.com/</string>
    <string name="essay_type_address">http://www.asweb.sinaapp.com/api/</string>
    <string name="essay_type_list_address">http://www.asweb.sinaapp.com/api/getlist/</string>
    <string name="essay_type_list_detail_address">http://www.asweb.sinaapp.com/api/getdetail/</string>
    <!-- 服务器地址-->
    <string name="as_times_address">http://astimes.cn/</string>
    <!-- 注册-->
    <string name="register_address">app/login/register/</string>
    <!-- 登录-->
    <string name="login_address">app/login/loginIn/</string>
    <!-- 退出-->
    <string name="logout_address">app/login/logout/</string>
    <!-- 美文-->
    <string name="article_address">app/article/</string>
    <!-- 美文列表-->
    <string name="article_list_address">app/article/getlist/</string>
    <!-- 美文列表详情-->
    <string name="article_list_detail_address">app/article/getdetail/</string>

    <!-- 图片-->
    <string name="image_address">app/images/</string>
    <!-- 图片列表-->
    <string name="image_list_address">app/images/getlist/</string>
    <!-- 图片列表详情-->
    <string name="image_list_detail_address">app/images/getdetail/</string>

    <string name="user_name">用户名</string>
    <string name="user_password">密码</string>
    <string name="password_repeat_str">确认密码</string>
    <string name="login">登录</string>
    <string name="default_signature">你是此生最美的风景，我是你的命中注定！</string>
    <string name="share_str">分享</string>
    <string name="comment_str">评论</string>
    <string name="prise_str">赞</string>
    <string name="informal_essays">正文</string>
    <string name="informal_title">标题</string>
    <array name="main_tabs_name">
        <item>首页</item>
        <item>随笔</item>
        <item>微语</item>
        <item>我的</item>
    </array>
    <array name="main_first_tabs_name">
        <item>美文</item>
        <item>电台</item>
        <item>图片</item>
    </array>
    <array name="main_forth_selections">
        <item>我的收藏</item>
        <item>我的相册</item>
        <item>我的随笔</item>
        <item>我的微语</item>
        <item>我的反馈</item>
    </array>
    <string name="action_send">发送</string>
    <string name="action_save">保存</string>
    <string name="comment_edit_str">精彩评论，由你开始</string>
    <string name="default_loading_str">loading...</string>
    <string name="login_is_empty">用户名为空！</string>
    <string name="user_had_existed">用户明已存在！</string>
    <string name="passwot_is_empty">密码为空！</string>
    <string name="invalid_user_str">无效的用户</string>
    <string name="register_str">注册</string>
    <string name="personal_info_str">个人资料</string>
    <string name="passwot_isnotequal_repeat">两次输入密码不一致！</string>
    <string name="info_icon_str">头像</string>
    <string name="info_nickname_str">昵称</string>
    <string name="info_gendar_str">性别</string>
    <string name="info_signature_str">签名</string>
    <string name="forget_password_str">忘记密码？</string>
    <string name="logout_str">退出登录</string>
    <string name="please_login_first">请先登录</string>
    <string name="comment_is_empty">评论内容不能为空</string>

</resources>
