<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/app_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/item_bg_shape"
            android:divider="@drawable/horizontal_divider"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:showDividers="middle">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/id_username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/id_username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_btn_dimen"
                    android:background="@null"
                    android:hint="@string/user_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/id_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/id_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_btn_dimen"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:hint="@string/user_password" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/id_password_repeat_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/id_password_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_btn_dimen"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:hint="@string/password_repeat_str" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/id_user_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_btn_dimen"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/common_btn_style"
            android:gravity="center"
            android:text="@string/register_str"
            android:textColor="@android:color/white"
            android:textSize="@dimen/main_title_size" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>