<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/default_bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/app_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/item_bg_shape"
            android:divider="@drawable/horizontal_divider"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:showDividers="middle">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/id_username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/id_username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_btn_dimen"
                    android:background="@null"
                    android:hint="@string/user_name"
                     />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/id_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/id_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_btn_dimen"
                    android:background="@null"
                    android:hint="@string/user_password"
                     />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_btn_dimen"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/common_btn_style"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/main_title_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            >

           <LinearLayout
               android:id="@+id/id_other_login"
               android:layout_width="match_parent"
               android:layout_alignParentBottom="true"
               android:orientation="horizontal"
               android:gravity="center_horizontal"
               android:layout_marginBottom="36dp"
               android:layout_height="wrap_content">

               <ImageButton
                   android:id="@+id/id_qq_login"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:layout_centerHorizontal="true"
                   android:src="@drawable/icon_qq"/>
               <ImageButton
                   android:layout_centerHorizontal="true"
                   android:id="@+id/id_weixin_login"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/icon_weixin"/>
           </LinearLayout>
            <TextView
                android:layout_above="@+id/id_other_login"
                android:layout_width="match_parent"
                android:text="账号登录"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:textSize="@dimen/main_subhead_size"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>